Try to stabilize batch perf tests